<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TRX</string>
    <string name="add_card_title">Update Payment Method</string>
    <string name="add_card_update_label">Update</string>
    <string name="alert_button_title_dismiss">Dismiss</string>
    <string name="alert_primary_back">Take me back</string>
    <string name="alert_primary_done">DONE</string>
    <string name="alert_primary_submit_payment">Submit Payment</string>
    <string name="alert_secondary_cancel">Cancel</string>
    <string name="alert_primary_cool">Cool</string>
    <string name="alert_secondary_report">Report an issue</string>
    <string name="alert_confirm_message">Are you sure?</string>
    <string name="alert_nevermind_label">Nevermind</string>
    <string name="alert_logout_message">You will be logged out</string>
    <string name="alert_logout_confirm_label">Yes, log me out</string>
    <string name="booking_alert_book_title">Book Session</string>
    <string name="booking_alert_book_price_button_label">Book (%s)</string>
    <string name="booking_alert_cancel_title">Cancel Session</string>
    <string name="booking_alert_cancel_no_button_label">No, Don\'t Cancel</string>
    <string name="booking_alert_cancel_policy_button_label">Please note our <u>Cancellation Policy</u></string>
    <string name="booking_alert_cancel_yes_button_label">Yes, Cancel</string>
    <string name="booking_alert_dismiss_button_label">Dismiss</string>
    <string name="booking_alert_join_title">Join Session</string>
    <string name="booking_alert_payment_button_label">Add Payment</string>
    <string name="booking_view_state_book_label_alt">BOOK</string>
    <string name="booking_view_state_book_label">BOOK SESSION</string>
    <string name="booking_view_state_booked_label">BOOKED</string>
    <string name="booking_view_state_view_label">VIEW</string>
    <string name="booking_view_state_video_label">START WORKOUT</string>
    <string name="booking_view_state_join_label">JOIN SESSION</string>
    <string name="booking_view_state_cancel_label" tools:ignore="ButtonCase">CANCEL SESSION</string>
    <string name="booking_view_state_default_label">N/A</string>
    <string name="cards_payment_method_label">Payment Method</string>
    <string name="cards_add_payment_method_label">Add Payment Method</string>
    <string name="cards_update_payment_method_label">Update Payment Method</string>
    <string name="cards_empty_label">You haven’t added a payment method yet</string>
    <string name="cards_type_text_visa">Visa</string>
    <string name="cards_type_text_master_card">Master Card</string>
    <string name="cards_type_text_amex">American Express</string>
    <string name="cards_type_text_credit_card">Credit Card</string>
    <string name="content_blank" />
    <string name="content_message">No %1$s available</string>
    <string name="content_btnprimary_txt">"Accept &amp; Continue"</string>
    <string name="content_row_image">Row image</string>
    <string name="calendarview_this_week">This Week</string>
    <string name="date_picker_done_button_label">Done</string>
    <string name="discover_tab_workouts_label">WORKOUTS</string>
    <string name="discover_tab_collections_label">COLLECTIONS</string>
    <string name="discover_tab_programs_label">PROGRAMS</string>
    <string name="discover_workouts_empty_label">There are no workouts</string>
    <string name="discover_collections_empty_label">There are no collections</string>
    <string name="discover_programs_empty_label">There are no programs</string>
    <string name="home_button_test_utility_label">TEST</string>
    <string name="home_user_name_label">Welcome, %1$s</string>
    <string name="home_user_sessions_label">%1$d SESSIONS</string>
    <string name="home_user_classes_label">%1$d CLASSES</string>
    <string name="home_user_workouts_label">%1$d WORKOUTS</string>
    <string name="home_upcoming_title_label">UPCOMING</string>
    <string name="home_book_with_title_label">BOOK WITH</string>
    <string name="home_live_title_label">HOT NEW LIVE CLASSES</string>
    <string name="home_on_demand_title_label">ON-DEMAND WORKOUTS</string>
    <string name="home_upcoming_button_label">VIEW ALL →</string>
    <string name="home_banner_description_label">Try TRX Training Club and experience LIVE Classes and get matched with a Virtual Personal Trainer for free.</string>
    <string name="home_banner_btn_label">LEARN MORE</string>
    <string name="home_banner_title_label">More Ways to Train</string>
    <string name="home_banner_section_title_label">TRX TRAINING CLUB</string>
    <string name="inputview_placeholder_birthday">Birthday</string>
    <string name="inputview_placeholder_card_number">Credit Card Number</string>
    <string name="inputview_placeholder_code">Enter Code</string>
    <string name="inputview_placeholder_cvv">CVV Code</string>
    <string name="inputview_placeholder_email">Email</string>
    <string name="inputview_placeholder_expiration">Expiration Date</string>
    <string name="inputview_placeholder_first">First Name</string>
    <string name="inputview_placeholder_last">Last Name</string>
    <string name="inputview_placeholder_password">Password</string>
    <string name="inputview_placeholder_confirm_password">Confirm Password</string>
    <string name="inputview_placeholder_phone">Phone Number</string>
    <string name="inputview_placeholder_promo">Promo code</string>
    <string name="inputview_placeholder_zip">Zip Code</string>
    <string name="inputview_error_message_birthday">Birthday is not valid</string>
    <string name="inputview_error_message_card_number">Card Number is not valid.</string>
    <string name="inputview_error_message_code">Enter Code</string>
    <string name="inputview_error_message_cvv">CVV is not valid.</string>
    <string name="inputview_error_message_email">Please enter a valid Email.</string>
    <string name="inputview_error_message_expiration">Expiration date is not valid</string>
    <string name="inputview_error_message_first_name">First name is not valid</string>
    <string name="inputview_error_message_last_name">Last name is not valid</string>
    <string name="inputview_error_message_password">The password must be at least 6 characters.</string>
    <string name="inputview_error_message_confirm_password">Your password and confirm password do not match.</string>
    <string name="inputview_error_message_phone_number">Phone number is not valid</string>
    <string name="inputview_error_message_zip">Zip Code is not valid.</string>
    <string name="live_today_title_label">TODAY</string>
    <string name="live_tomorrow_title_label">TOMORROW</string>
    <string name="live_recommended_title_label">NEXT WEEK</string>
    <string name="live_upcoming_title_label">UPCOMING</string>
    <string name="live_button_schedule_label">SCHEDULE →</string>
    <string name="live_trainers_title_label">LIVE TRAINERS</string>
    <string name="live_promotions_title_label">FOR YOU</string>
    <string name="login_forgot">Forgot Password?</string>
    <string name="login_log_in">Log in</string>
    <string name="memberships_title">Memberships</string>
    <string name="memberships_choose_membership_label">Choose Membership</string>
    <string name="memberships_current_membership_label">Current Membership</string>
    <string name="memberships_restore_purchases_label">Restore Purchases</string>
    <string name="memberships_cancel_membership_label">Cancel Membership</string>
    <string name="memberships_cancelled_membership_label">Cancelled Membership</string>
    <string name="memberships_choose_membership_alert_message">Are you sure you want to buy this membership?</string>
    <string name="memberships_choose_membership_alert_primary_label">SUBMIT PAYMENT</string>
    <string name="memberships_show_cancel_mobile_alert_message">To cancel this membership you must cancel through the Play Store app</string>
    <string name="memberships_show_cancel_mobile_alert_primary_label">GO TO PLAY STORE</string>
    <string name="memberships_show_cancel_active_alert_message">To buy this membership you must cancel your current membership</string>
    <string name="memberships_show_cancel_active_primary_label">GO TO MEMBERSHIPS</string>
    <string name="memberships_show_cancel_web_alert_message">This membership was not bought with the signed in Google account</string>
    <string name="memberships_show_cancel_web_primary_label">GO TO WEBSITE</string>
    <string name="memberships_alert_secondary_label">DISMISS</string>
    <string name="memberships_last_bill_date_label">Last Bill Date:</string>
    <string name="memberships_next_bill_date_label">Next Bill Date:</string>
    <string name="memberships_terms_privacy">By purchasing, you agree to our Privacy Policy and Terms of Service</string>
    <string name="memberships_terms">Terms of Service</string>
    <string name="memberships_privacy">Privacy Policy</string>
    <string name="promos_top_title_label">FOR YOU</string>
    <string name="player_participants_label">%1$d Participants</string>
    <string name="player_end_workout_button_label">END WORKOUT</string>
    <string name="player_screen_cast_coming_soon_message">Coming Soon!</string>
    <string name="player_live_label">LIVE <font color='yellow'>•</font></string>
    <string name="player_test_title_label">Developer Session for Mobile</string>
    <string name="player_test_instructor_label">Some Instructor</string>
    <string name="player_test_participants_label">9 Participants</string>
    <string name="restore_button_label">Restore Purchases</string>
    <string name="restore_trx_training_label">TRX TRAINING</string>
    <string name="restore_title">Restore your Purchases</string>
    <string name="restore_description">Welcome to the completely redesigned TRX Training Club. Already had a subscription to the TRX App? Tap here to get your access to hundreds of new workouts across 7 different training programs.</string>
    <string name="restore_home_alert_primary_label">GO TO HOME</string>
    <string name="restore_alert_error_primary_label">GO TO PLAY STORE</string>
    <string name="restore_alert_error_secondary_label">DISMISS</string>
    <string name="restore_alert_success_message">Purchases successfully restored</string>
    <string name="restore_alert_success_primary_label">TAKE ME BACK</string>
    <string name="settings_title">SETTINGS</string>
    <string name="settings_email">Email</string>
    <string name="settings_memberships">Memberships</string>
    <string name="settings_shop">Shop TRX Products</string>
    <string name="settings_getting_started">Getting Started Videos</string>
    <string name="settings_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="settings_contact_support">Contact Support</string>
    <string name="settings_restore_purchases">Restore Purchases</string>
    <string name="settings_logout">Log Out</string>
    <string name="settings_membership">Memberships</string>
    <string name="settings_permissions">Permissions</string>
    <string name="settings_type_show_maintenance">Show Maintenance</string>
    <string name="settings_test_screen">Test Screens</string>
    <string name="splash_title">Welcome to the TRX Training Club</string>
    <string name="splash_continue_label">CONTINUE WITH</string>
    <string name="splash_email_button_label">EMAIL</string>
    <string name="onboarding_virtual_title">TRX virtual Training</string>
    <string name="onboarding_virtual_description">World-class Trainers. Anytime. Anywhere</string>
    <string name="onboarding_virtual_list_text_one">Expert help and personalized support from hundreds of top-rated trainers</string>
    <string name="onboarding_virtual_list_text_two">Stay accountable with a fully customized plan built for you</string>
    <string name="onboarding_continue_button_label">Continue</string>
</resources>