<?xml version="1.0" encoding="utf-8"?>
<com.trx.consumer.common.CommonView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.trx.consumer.common.CommonImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_media_welcome"
        android:tint="@color/blackAlpha20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.trx.consumer.common.CommonView
        android:id="@+id/layoutNavBar"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_bar_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.trx.consumer.common.CommonImageView
            android:id="@+id/btnClose"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_btn_close_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.trx.consumer.common.CommonView>

    <com.trx.consumer.common.CommonLabel
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/atcarquette_bold"
        android:text="@string/restore_trx_training_label"
        android:textAllCaps="true"
        android:textColor="@color/yellow"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/lblTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

    <com.trx.consumer.common.CommonLabel
        android:id="@+id/lblTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/restore_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lblDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.trx.consumer.common.CommonLabel
        android:id="@+id/lblDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/atcarquette_regular"
        android:text="@string/restore_description"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRestore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.trx.consumer.common.CommonButton
        android:id="@+id/btnRestore"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/atcarquette_bold"
        android:gravity="center"
        android:text="@string/restore_button_label"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:visibility="visible"
        app:backgroundColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.trx.consumer.common.CommonHudView
        android:id="@+id/hudView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

</com.trx.consumer.common.CommonView>