<?xml version="1.0" encoding="utf-8"?>
<com.trx.consumer.common.CommonView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:backgroundColor="@color/white">

    <com.trx.consumer.common.CommonImageView
        android:id="@+id/imgHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/img_media_onboarding_003" />

    <com.trx.consumer.common.CommonView
        android:id="@+id/viewNavBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.trx.consumer.common.CommonImageView
            android:id="@+id/btnClose"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_btn_close_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.trx.consumer.common.CommonView>

    <com.trx.consumer.common.CommonLabel
        android:id="@+id/lblTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:textAllCaps="true"
        android:textColor="@color/yellow"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lblDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/onboarding_virtual_title" />

    <com.trx.consumer.common.CommonLabel
        android:id="@+id/lblDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/viewBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/onboarding_virtual_description" />

    <com.trx.consumer.common.CommonView
        android:id="@+id/viewBottom"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_marginBottom="@dimen/bottom_bar_height"
        app:backgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.trx.consumer.common.CommonLabel
            android:id="@+id/lblItemOne"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_marker"
            android:drawablePadding="10dp"
            android:fontFamily="@font/atcarquette_medium"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/onboarding_virtual_list_text_one" />

        <View
            android:id="@+id/vLineOne"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="@id/lblItemOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.trx.consumer.common.CommonLabel
            android:id="@+id/lblItemTwo"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_marker"
            android:drawablePadding="10dp"
            android:fontFamily="@font/atcarquette_medium"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblItemOne"
            tools:text="@string/onboarding_virtual_list_text_two" />

        <View
            android:id="@+id/vLineTwo"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="@id/lblItemTwo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.trx.consumer.common.CommonLabel
            android:id="@+id/lblItemThree"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/ic_marker"
            android:drawablePadding="10dp"
            android:fontFamily="@font/atcarquette_medium"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblItemTwo"
            tools:text="@string/onboarding_virtual_list_text_one" />

        <View
            android:id="@+id/vLineThree"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblItemThree" />

        <com.trx.consumer.common.CommonButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/atcarquette_bold"
            android:gravity="center"
            android:text="@string/onboarding_continue_button_label"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:backgroundColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </com.trx.consumer.common.CommonView>

</com.trx.consumer.common.CommonView>
